# OpenGL-Test

./: CMakeLists.txt  README.md
assets/shaders/: fragmentShader.fs  lightShader.fs  spriteShader.fs  vertexShader.vs
src/: Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Manager.cpp  Manager.hpp  RenderManager.cpp  RenderManager.hpp  Shader.cpp  Shader.hpp  TextureManager.cpp  TextureManager.hpp  Utility.cpp  Utility.hpp  main.cpp
src/Components/: Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Components.hpp  FPSCounter.cpp  FPSCounter.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Player.cpp  Player.hpp  Position.cpp  Position.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Transform.cpp  Transform.hpp
src/Rendering/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  RenderEngine.cpp  RenderEngine.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
